2008-02-18  Martin Leidig  <mleidig@schlund.de>

	Migrated AJAX/Webservice support from Axis 1.2 to JAXWS 2.
	
	The webservice integration layer abstracts from the webservice stack 
	implementation specifics and all SOAP services should work without changes 
	using the new mechanism (due to the big technology jump there possibly
	are some special cases which won't work as expected, so some testing is
	recommended).

	Other big under-cover changes are: 
	- Javascript-SOAP implementation: changed style from rpc/encoded
	to document/wrapped (rpc style isn't supported any more)
	- SOAP service endpoint integration: now proxy classes are generated
	from the Service interface and implementation classes (allows classes
	without annotations as JAXWS services, provides hooks for custom
	error handling and monitoring)

	Added JAXWS libraries and dependencies:
	* lib/jaxb-api-2.1.jar
	* lib/jaxb-impl-2.1.6.jar
	* lib/jaxb-xjc-2.1.6.jar
	* lib/jaxws-api-2.1.3.jar
	* lib/jaxws-rt-2.1.3.jar
	* lib/jaxws-tools-2.1.3.jar
	* lib/jsr173_api-1.0.jar
	* lib/jsr181-api-2.0.jar
	* lib/jsr250_api-1.0.jar
	* lib/saaj-api-1.3.jar
	* lib/saaj-impl-1.3.jar
	* lib/sjsxp-1.0.1.jar
	* lib/stax-ex-1.2.jar
	* lib/streambuffer-0.5.jar
	* lib/wsdl4j-1.6.2.jar

	Removed Axis libraries and dependencies:
	* lib/axis-1.2.1.jar
	* lib/axis-ant-1.2.1.jar
	* lib/jaxrpc-1.1.jar
	* lib/saaj-1.2.jar
	* lib/wsdl4j-1.5.1.jar

	Removed Axis integration specific classes/packages:
	* projects/core/conf/server-config.wsdd
	* src/de/schlund/pfixcore/webservice/generate
	* src/de/schlund/pfixcore/webservice/generate/Java2Wsdl.java
	* src/de/schlund/pfixcore/webservice/generate/WebServiceTask.java
	* src/de/schlund/pfixcore/webservice/generate/Wsdl2Java.java
	* src/de/schlund/pfixcore/webservice/generate/Wsdl2Js.java
	* src/de/schlund/pfixcore/webservice/handler
	* src/de/schlund/pfixcore/webservice/handler/AbstractHandler.java
	* src/de/schlund/pfixcore/webservice/handler/ErrorHandler.java