@@ -1,3 +1,10 @@
+2008-03-04  Martin Leidig  <mleidig@schlund.de>
+
+	* src/de/schlund/pfixcore/webservice/jaxws/generate/WebserviceTask.java:
+	Only generate JAXWS endpoint descriptor if SOAP protocol is used.
+	* src/de/schlund/pfixcore/webservice/AdminWebapp.java: Only provide
+	WSDL link if SOAP protocol is used, adapt JSON stub view link.
+
 2008-02-18  Martin Leidig  <mleidig@schlund.de>
 
 	Migrated AJAX/Webservice support from Axis 1.2 to JAXWS 2.
